--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "prettier": "^2.5.1"
   }
 }
